--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
     namespace 'com.example.myapplication'
     compileSdk 33
 
+
     defaultConfig {
         applicationId "com.example.myapplication"
         minSdk 24
@@ -35,20 +36,30 @@ android {
             useJUnitPlatform()
         }
     }
+
 }
 
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'org.osmdroid:osmdroid-android:6.1.13'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation "com.google.android.gms:play-services-wearable:18.0.0"
+    implementation "com.google.android.gms:play-services-analytics:18.0.2"
+    implementation 'com.google.android.libraries.places:places:3.1.0'
+    implementation 'com.google.maps:google-maps-services:2.2.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.0'
+    implementation 'com.google.maps:google-maps-services:2.2.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
 //    testImplementation 'junit:junit:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     testImplementation "androidx.arch.core:core-testing:2.2.0"
-    testImplementation 'org.mockito:mockito-inline:4.0.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
 }
