--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -53,6 +54,10 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:2.2.0'
     implementation 'com.google.maps:google-maps-services:2.2.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.maps:google-maps-services:2.2.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.2'
+    implementation 'org.slf4j:slf4j-simple:1.7.25'
+
 
 //    testImplementation 'junit:junit:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter'
