--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.google.maps:google-maps-services:2.2.0'
     implementation 'com.google.maps.android:android-maps-utils:2.2.2'
     implementation 'org.slf4j:slf4j-simple:1.7.25'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
 
 //    testImplementation 'junit:junit:5.8.1'
